remove bootstrap mixins

--- a/assets/sass/core/_reboot.scss
+++ b/assets/sass/core/_reboot.scss
@@ -159,13 +159,9 @@ a {
   color: $link-color;
   text-decoration: $link-decoration;
 
-  @include hover-focus {
+  &:hover, &:focus {
     color: $link-hover-color;
     text-decoration: $link-hover-decoration;
-  }
-
-  &:focus {
-    @include tab-focus();
   }
 }
 
